--- a/diana-air-bp/test index.html
+++ b/diana-air-bp/test index.html
@@ -7,13 +7,15 @@
 
   <style>
     :root {
-      --rose: #e4b1a2;
-      --deep: #2d2a2a;
-      --ink: #3e3b3b;
+      --rose: #e7b6a7;
+      --terracotta: #dba08d;
+      --terracotta-dark: #c8806c;
+      --deep: #2a2828;
+      --ink: #3c3939;
       --soft: #faf7f6;
-      --line: #e8d6cf;
-      --accent: #d58a7a;
-      --radius: 16px;
+      --line: #e7d7cf;
+      --accent: #c97864;
+      --radius: 18px;
       --max: 780px;
     }
 
@@ -25,27 +27,29 @@
       line-height: 1.6;
     }
 
+    /* Gradient Header */
     header {
-      max-width: var(--max);
-      margin: 0 auto;
-      padding: 2rem 1.5rem;
+      background: linear-gradient(135deg, var(--rose), var(--terracotta));
+      padding: 2.8rem 1.5rem;
       text-align: center;
+      color: var(--deep);
     }
 
     header img.logo {
       width: 140px;
+      filter: brightness(0.95);
       margin-bottom: 1rem;
     }
 
     h1 {
-      font-size: 2rem;
-      margin-bottom: 0.5rem;
-      color: var(--deep);
+      font-size: 2.1rem;
+      margin-bottom: 0.4rem;
     }
 
     .highlight {
-      color: var(--accent);
       font-weight: bold;
+      color: var(--deep);
+      opacity: 0.85;
     }
 
     .container {
@@ -54,22 +58,24 @@
       margin: 0 auto;
     }
 
-    .hero img {
-      width: 100%;
-      border-radius: var(--radius);
-      margin-top: 1rem;
-    }
-
     section {
       margin: 3rem 0;
     }
 
+    .hero img {
+      width: 100%;
+      border-radius: var(--radius);
+      margin-top: 1rem;
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.12);
+    }
+
     .card {
-      background: white;
-      padding: 1.5rem;
+      background: #fff;
+      padding: 1.6rem;
       border-radius: var(--radius);
       border: 1px solid var(--line);
-      margin: 1.5rem 0;
+      margin: 1.6rem 0;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.05);
     }
 
     .bio {
@@ -81,36 +87,92 @@
     .bio img {
       width: 120px;
       height: 120px;
-      object-fit: cover;
       border-radius: 50%;
+      object-fit: cover;
       border: 2px solid var(--line);
       flex-shrink: 0;
     }
 
+    /* Pricing Wrapper */
+    .pricing-wrapper {
+      max-width: var(--max);
+      margin: 0 auto;
+      padding: 1.5rem;
+    }
+
     .pricing {
-      background: white;
+      background: #fff;
       padding: 2rem;
       border-radius: var(--radius);
       border: 1px solid var(--line);
+      box-shadow: 0 3px 12px rgba(0,0,0,0.06);
     }
 
-    .cta {
-      display: block;
-      background: var(--accent);
-      color: white;
+    .price {
+      font-size: 1.6rem;
+      color: var(--terracotta-dark);
+      font-weight: bold;
+    }
+
+    /* Premium FAQ Accordion */
+    details {
+      background: #fff;
+      padding: 1rem 1.2rem;
+      border-radius: var(--radius);
+      border: 1px solid var(--line);
+      margin: 1rem 0;
+      cursor: pointer;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+    }
+
+    summary {
+      font-weight: bold;
+      color: var(--deep);
+      font-size: 1.1rem;
+      outline: none;
+    }
+
+    summary::-webkit-details-marker {
+      display: none;
+    }
+
+    details[open] {
+      border-color: var(--terracotta-dark);
+    }
+
+    /* Centered Sender Form */
+    .sender-wrapper {
+      max-width: 520px;
+      margin: 0 auto;
+    }
+
+    /* Sticky CTA */
+    .sticky-cta {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: var(--terracotta-dark);
+      color: #fff;
       text-align: center;
       padding: 1rem;
-      border-radius: var(--radius);
-      margin-top: 2rem;
-      text-decoration: none;
       font-size: 1.2rem;
+      text-decoration: none;
+      display: none;
+    }
+
+    @media (max-width: 680px) {
+      .sticky-cta {
+        display: block;
+      }
     }
 
     footer {
       text-align: center;
-      padding: 2rem 0;
+      padding: 3rem 0;
+      opacity: 0.6;
+      margin-top: 4rem;
       font-size: 0.9rem;
-      opacity: 0.7;
     }
   </style>
 </head>
@@ -128,7 +190,7 @@
   <!-- HERO -->
   <section class="hero">
     <p>You reconnected with your rhythm in Raw to Reset.<br>
-    Now it's time to level up and step into — confidence, structure, and emotional clarity.</p>
+    Now you're ready for structure, identity expansion and emotional steadiness.</p>
 
     <img src="new.jpg" alt="Blueprint Hero Image">
   </section>
@@ -138,7 +200,7 @@
     <h2>What the Blueprint Is</h2>
 
     <div class="card">
-      <p>This isn’t a generic wellness program. It's a rhythm-anchored evolution that blends:</p>
+      <p>This is a rhythm-anchored evolution blending:</p>
       <ul>
         <li>identity work and emotional clarity</li>
         <li>cycle or phase-mimic rhythm mapping</li>
@@ -159,57 +221,35 @@
       <ul>
         <li>Women in their 30s–40s ready for reinvention</li>
         <li>Past Raw to Reset participants</li>
-        <li>Women balancing family, work, identity</li>
-        <li>Those craving emotional steadiness and renewed energy</li>
-        <li>Anyone wanting clarity, rhythm, grounded power</li>
+        <li>Women balancing family, work, identity shifts</li>
+        <li>Those craving grounded energy + emotional steadiness</li>
+        <li>Anyone wanting clarity, rhythm, and momentum</li>
       </ul>
     </div>
 
     <img src="salmon-women.jpg" alt="Women outdoors" style="width:100%; border-radius:var(--radius); margin-top:1rem;">
   </section>
 
-    <!-- PROGRAM STRUCTURE -->
+  <!-- PROGRAM STRUCTURE -->
   <section>
     <h2>The 6-Part Blueprint Journey</h2>
 
-    <div class="card">
-      <h3>Week 1 — Grounding + Identity</h3>
-      <p>Nervous-system reset, emotional triage, reflection tools.</p>
-    </div>
+    <div class="card"><h3>Week 1 — Grounding + Identity</h3><p>Nervous-system reset, emotional triage, reflection tools.</p></div>
 
-    <div class="card">
-      <h3>Week 2 — Cycle Mapping + Hormone Intelligence</h3>
+    <div class="card"><h3>Week 2 — Cycle Mapping + Hormone Intelligence</h3>
       <p>Your unique rhythm (menstrual or phase-mimic), energy & nutrition patterns.</p>
+
+      <div class="card" style="background:#fff7f4;">
+        <h3 style="margin-top:0;">✨ Cycle-Mimic Add-On</h3>
+        <p>Support for perimenopausal rhythms using nutrition, lifestyle, and optional HRT to mimic ovulation’s power and luteal calm.</p>
+      </div>
     </div>
 
-    <div class="card">
-      <h3>Week 3 — Relationships + Boundaries</h3>
-      <p>Communication clarity, core needs, micro-boundaries.</p>
-    </div>
-
-    <div class="card">
-      <h3>Week 4 — Body + Mind Reboot</h3>
-      <p>Declutter digital, emotional, and physical overwhelm.</p>
-    </div>
-
-    <div class="card">
-      <h3>Week 5 — Vision + Direction</h3>
-      <p>Purpose, identity evolution, AI planning tools.</p>
-    </div>
-
-    <div class="card">
-      <h3>Week 6 — Integration + Radiance</h3>
-      <p>Embodying your new rhythm. Continuity plan. Celebration.</p>
-    </div>
+    <div class="card"><h3>Week 3 — Relationships + Boundaries</h3><p>Communication clarity, core needs, micro-boundaries.</p></div>
+    <div class="card"><h3>Week 4 — Body + Mind Reboot</h3><p>Declutter digital, emotional, and physical overwhelm.</p></div>
+    <div class="card"><h3>Week 5 — Vision + Direction</h3><p>Identity evolution, purpose, AI planning tools.</p></div>
+    <div class="card"><h3>Week 6 — Integration + Radiance</h3><p>Embody your new rhythm.</p></div>
   </section>
-
-  <div class="card">
-      <h3>Cycle-Mimicking Add on — How to thrive even during your perimenopause</h3>
-      <p>How to be so tuned into you're feeling and learning how to use nutrition, lifestyle and even HRT to mimic the power of ovulation and the calm of the luteal phase.</p>
-      <p>See Pricing Below</p>
-    </div>
-  </section>
-
 
   <!-- MEET DIANA -->
   <section>
@@ -218,8 +258,8 @@
       <img src="portrait1.jpg" alt="Diana Air">
       <div>
         <p>I know what it feels like to be out of rhythm — tired, foggy, overwhelmed.</p>
-        <p>The Blueprint is where you learn to live with clarity, direction and emotional steadiness. It's where you rise into the next version of yourself.</p>
-        <p>This isn't about fixing women. This is about learning to lean into everything that makes us powerful.</p>
+        <p>The Blueprint is where clarity meets direction and emotional steadiness finally becomes your baseline.</p>
+        <p>This isn't about fixing women. This is about amplifying everything that makes us powerful.</p>
       </div>
     </div>
   </section>
@@ -227,123 +267,102 @@
 </div>
 
 <!-- PRICING -->
-<section>
-  <h2>Founding Cohort — Starts April 13th, 2026</h2>
+<div class="pricing-wrapper">
 
-  <div class="pricing">
+  <section>
+    <h2>Founding Cohort — Starts April 13th, 2026</h2>
 
-    <!-- First 5 Free -->
-    <div class="plan">
-      <strong>💎 First 5 Free</strong>
-      <p class="price">£0</p>
-      <p>For women completing Raw to Reset — a thank-you for being the earliest pioneers.</p>
+    <div class="pricing">
+
+      <div class="plan">
+        <strong>💎 First 5 Free</strong>
+        <p class="price">£0</p>
+        <p>A thank-you for being the earliest pioneers.</p>
+      </div>
+
+      <hr>
+
+      <div class="plan">
+        <strong>⚡ Early Bird (Pay in Full)</strong>
+        <p class="price">£127</p>
+        <p><em>Available until March 31st.</em></p>
+      </div>
+
+      <hr>
+
+      <div class="plan">
+        <strong>🌿 Standard (Pay in Full)</strong>
+        <p class="price">£197</p>
+      </div>
+
+      <div class="plan">
+        <strong>🌿 Standard (3-Month Plan)</strong>
+        <p class="price">£65.66 / month</p>
+        <p>First payment due at enrolment.</p>
+      </div>
+
+      <div class="plan">
+        <strong>✨ Cycle-Mimic Add-On</strong>
+        <p class="price">£26.66</p>
+      </div>
+
+      <!-- SENDER FORM -->
+      <div class="card sender-wrapper">
+        <h3 style="text-align:center; margin-top:0;">Join the Blueprint Waitlist</h3>
+
+        <script>
+          (function (s, e, n, d, er) {
+            s['Sender'] = er;
+            s[er] = s[er] || function () {
+              (s[er].q = s[er].q || []).push(arguments)
+            }, s[er].l = 1 * new Date();
+            var a = e.createElement(n),
+                m = e.getElementsByTagName(n)[0];
+            a.async = 1;
+            a.src = d;
+            m.parentNode.insertBefore(a, m)
+          })(window, document, 'script', 'https://cdn.sender.net/accounts_resources/universal.js', 'sender');
+          sender('5200e1d77e6017');
+        </script>
+
+        <div class="sender-form-field" data-sender-form-id="egJGn3"></div>
+      </div>
+
     </div>
+  </section>
 
-    <hr style="border:none; border-top:1px solid var(--line); margin:1.5rem 0;">
+  <!-- FAQ ACCORDION -->
+  <section>
+    <h2>Frequently Asked Questions</h2>
 
-    <!-- Early Bird Pay in Full -->
-    <div class="plan">
-      <strong>⚡ Early Bird (Pay in Full)</strong>
-      <p class="price">£127</p>
-      <p>Available until March 31st, 2026.  
-      <em>Early Bird is a paid-in-full option only.</em></p>
-    </div>
+    <details>
+      <summary>When does enrolment close?</summary>
+      <p>Enrolment is open during Week 1 and Week 2. After Day 13, it closes until the next cohort.</p>
+    </details>
 
-    <hr style="border:none; border-top:1px solid var(--line); margin:1.5rem 0;">
+    <details>
+      <summary>Is Early Bird available on instalments?</summary>
+      <p>No — Early Bird is paid-in-full only.</p>
+    </details>
 
-    <!-- Standard Pay in Full -->
-    <div class="plan">
-      <strong>🌿 Standard (Pay in Full)</strong>
-      <p class="price">£197</p>
-      <p>From April 1st, 2026.</p>
-    </div>
+    <details>
+      <summary>Can I join late?</summary>
+      <p>Yes — until Day 13. After that, doors close to protect group rhythm.</p>
+    </details>
 
-    <!-- Standard Instalments -->
-    <div class="plan" style="margin-top:1.2rem;">
-      <strong>🌿 Standard (3-Month Plan)</strong>
-      <p class="price">£65.66 / month</p>
-      <p>3 monthly payments · Total £197<br>
-      <strong>First payment due at enrolment.</strong><br>
-      Remaining instalments are billed automatically by Stripe.</p>
-    </div>
+    <details>
+      <summary>Do I need to finish paying before starting?</summary>
+      <p>No — only the first payment is required at enrolment.</p>
+    </details>
 
-    <!-- Cycle Mimicing -->
-    <div class="plan" style="margin-top:1.2rem;">
-      <strong>🌿 Add Available at Chatout</strong>
-      <p class="price">£26.66 </p>
-    
-    </div>
+  </section>
 
-    <!-- Waitlist Form -->
-    <div class="card" style="padding:2rem; margin-top:2rem;">
-      <h3 style="margin-top:0; text-align:center; color:var(--deep);">
-        Join the Blueprint Waitlist
-      </h3>
+</div>
 
-      <script>
-        (function (s, e, n, d, er) {
-          s['Sender'] = er;
-          s[er] = s[er] || function () {
-            (s[er].q = s[er].q || []).push(arguments)
-          }, s[er].l = 1 * new Date();
-          var a = e.createElement(n),
-              m = e.getElementsByTagName(n)[0];
-          a.async = 1;
-          a.src = d;
-          m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://cdn.sender.net/accounts_resources/universal.js', 'sender');
-        sender('5200e1d77e6017');
-      </script>
-
-      <div class="sender-form-field" data-sender-form-id="egJGn3"></div>
-    </div>
-
-  </div>
-</section>
-
-
-<section>
-  <h2>Frequently Asked Questions</h2>
-
-  <div class="card">
-    <strong>When does enrolment close?</strong>
-    <p>
-      Enrolment is open during Week 1 and Week 2 of the program.  
-      After Day 13, the doors close until the next cohort June 8th 2026.
-    </p>
-  </div>
-
-  <div class="card">
-    <strong>Is Early Bird available on instalments?</strong>
-    <p>No. Early Bird is a pay-in-full bonus only. Instalments apply to the standard price.</p>
-  </div>
-
-  <div class="card">
-    <strong>Can I join after the program has started?</strong>
-    <p>
-      
-      Yes — late joiners are welcome up to Day 13.  
-      After Week 2, enrolment closes so the group can stay in rhythm and Blueprint doesn't unsettle your nervous system. Enrolment opens again June 8th 2026.
-    </p>
-  </div>
-
-  <div class="card">
-    <strong>Do I have to finish paying before the program starts?</strong>
-    <p>
-      No. Only the first payment is due at enrolment.  
-      Your remaining instalments are billed automatically by Stripe.
-    </p>
-  </div>
-
-  <div class="card">
-    <strong>What if I join late?</strong>
-    <p>
-      If you join during Week 1 or 2, you’ll get immediate access to the replays  
-      and can join us live from that point forward.
-    </p>
-  </div>
-
-
+<!-- STICKY CTA -->
+<a href="#waitlist" class="sticky-cta">
+  Join the Waitlist — April 13th Start
+</a>
 
 <footer>
   Built by Diana Air Coaching + ECHO · 2026
@@ -351,4 +370,3 @@
 
 </body>
 </html>
-
