--- a/day1/day1-journal.html
+++ b/day1/day1-journal.html
@@ -187,6 +187,9 @@
       placeholder="One small action to stay in rhythm tomorrow..."></textarea>
     </section>
 
+        <div style="margin-top:32px; text-align:center;">
+
+
           <p style="margin-bottom:18px; font-size:0.98rem; opacity:0.9;">
         When you’re finished reflecting, you can <strong>share your thoughts</strong>  
         or <strong>keep them private.</strong>
